@@ -7,4 +7,5 @@ fix: 7.0.0-17
 desc: |
  This update addresses the following issues:
  * Add support for post-copy migration.
-bug: [47617]
+ * Fix file permissions of backup directory.
+bug: [47617, 47741]
