@@ -48,5 +48,5 @@ override_dh_auto_test:
 override_dh_installinit:
 	dh_installinit --error-handler=error_restart -- defaults 30 70
 
-override_dh_perms:
-	chmod 0700 debian/tmp/var/cache/univention-virtual-machine-manager-daemon
+override_dh_fixperms:
+	chmod 0700 debian/univention-virtual-machine-manager-daemon/var/cache/univention-virtual-machine-manager-daemon
